[package]
name = "fibers_http_server"
version = "0.1.12"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A tiny HTTP/1.1 server framework"
homepage = "https://github.com/sile/fibers_http_server"
repository = "https://github.com/sile/fibers_http_server"
readme = "README.md"
keywords = ["http"]
categories = ["web-programming::http-server"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = {repository = "sile/fibers_http_server"}
codecov = {repository = "sile/fibers_http_server"}

[dependencies]
atomic_immut = "0.1"
bytecodec = { version = "0.4.14", features = ["tokio-async"] }
factory = "0.1"
futures03 = { package = "futures", version = "0.3", features = ["compat"] }
httpcodec = "0.2"
prometrics = "0.1"
slog = "2"
trackable = "1.2"
url = "1"
tokio = { version = "1.0", features = ["net", "io-util", "sync", "rt", "macros"] }
pin-project = "1"

[dev-dependencies]
sloggers = "0.3"
